[gd_scene load_steps=3 format=2]

[ext_resource path="res://Characters/Character.gd" type="Script" id=1]

[sub_resource type="Animation" id=1]
resource_name = "isHurt"
loop = true
step = 0.5
tracks/0/type = "value"
tracks/0/path = NodePath(".:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.5, 1 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 1, 0.176471, 0.176471, 1 ), Color( 1, 1, 1, 1 ) ]
}

[node name="Character" type="KinematicBody2D"]
script = ExtResource( 1 )
__meta__ = {
"_edit_group_": true
}

[node name="Body" type="AnimatedSprite" parent="."]

[node name="Muzzle" type="Position2D" parent="Body"]

[node name="isHurt_anime" type="AnimationPlayer" parent="Body"]
anims/isHurt = SubResource( 1 )

[node name="isHurt_Timer" type="Timer" parent="Body"]
one_shot = true

[node name="notHurt_Timer" type="Timer" parent="Body"]
wait_time = 5.0

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]

[node name="GunTimer" type="Timer" parent="."]
[connection signal="timeout" from="Body/isHurt_Timer" to="." method="_on_isHurt_Timer_timeout"]
[connection signal="timeout" from="Body/notHurt_Timer" to="." method="_on_notHurt_Timer_timeout"]
[connection signal="timeout" from="GunTimer" to="." method="_on_GunTimer_timeout"]
